style.css
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

nav {
    background-color: transparent;

    
    
    
}
header p{
    position: absolute;
    z-index: 1;
    font-size: 2rem;
}

header img {
    width: 100%;
    position: relative;
    
    
    
    
}



#nav-menu{
    justify-content: space-between;
    
}

.hide {
    display: none;
}



#contact-page .socmed {
    display: flex;
    justify-content: space-evenly;
    list-style: none;
    
    
}

#contact-page .socmed i {
    color: black;
}



#registration-container {
    width: 50%;
}

#login-container{
    width: 50%;
}

#message-box {
    height: 150px;
    border-radius: 8px;
    border-color: black;
}


#brand-card-main {
    
    top: -50px;
    position: relative;
    
    
}

#brand-card{
    align-items: center;
    height: 100px;
    width: 150px;
    text-transform: uppercase;
    font-weight: bold;
    font-size: 8px;
    /* top: -50px; */
   
    
}

#brand-card a img{
    height: 3rem;
    width: 100%;
    align-items: center;
    padding: 0 25px;

}

#brand-card a{
    text-decoration: none;
    color: black;

}




#category-box {
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: white;
    position: relative;
    top: -70px;
    background-color: transparent;
    height: 100%;
    width: 100%;
    
    
    
}

.hscroll {
    width: 600px;
    height: 150px;
    background-color: white;
    border: solid 1px #ddd;
    border-radius: 20px;
    display: none;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    position: relative;
    overflow: hidden;
    padding: 0;
    
}

.hscroll .btn-scroll {
    background-color: white;
    color: black;
    padding: 85px 20px;
    border: 0;
    z-index: 1;
    box-shadow: 0 0 0px;
    cursor: pointer;
}

.category-items {
   
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: center;
    position: absolute;
    left: 0;
    transition: 0.5s all ease-in-out;
    
}

.product-item a img {
    height: 50px;
    width: 80px;
}

.product-item {
    margin: 15px 30px;
    display: flex;
    justify-content: center;
    align-items: center;
    transform: rotateZ('45deg');

}
.product-item a {
    text-align: center;
    text-decoration: none;
    color: black;
   
}
.product-item img {
    height: 150px;
    width: 150px;
    transform: rotateZ('-45deg');
}




.color-variant input[type="radio"] {
    /* display: none; */
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
    border-radius: 50%;
    width: 20px;
    height: 20px;
    border: 2px solid #000;
    background-color: #fff;
    outline: none;
    margin-right: 10px;
    

}
.color-variant input[type="radio"]:checked {
    background-color: #000;
    color: red;

  }

  .color-btn {
    height: 20px;
    width: 20px;
    border-radius: 50%;
    /* background-color: red; */
    border: 1;
   
   
  }





footer {
    background-color: #ddd;
    bottom: 0;
}

footer ul {
    list-style: none;
    padding: 0;
    text-align: center

}
footer ul a{
    text-decoration: none;
    color: black;
    
}

footer .socmed {
    display: flex;
    justify-content: space-around;
    list-style:none;
}

footer h3 {
    margin-top: 30px;
}




@media screen and (max-width:991px) {

    #registration-container {
        width: 100%;
    }

    #login-container {
        width: 100%;
    }

    #category-box {
        margin-left: 1px;
    }


    .hscroll {
        display: flex;
        width: 100%;
        
    }
    #brand-card-main {
        display: none;
    }
 

}

